# gazelle-pyproject

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum
examples/: pyproject.toml
examples/hello_world/: BUILD.bazel  main.py  pyproject.toml
examples/libhello/: BUILD.bazel  pyproject.toml
examples/libhello/src/libhello/: __init__.py
examples/libworld/: BUILD.bazel  pyproject.toml
examples/libworld/src/libworld/: __init__.py
gazelle_pyproject/: BUILD.bazel  configure.go  fix.go  generate.go  kinds.go  language.go  resolve.go
