load("@gazelle//:def.bzl", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gazelle_pyproject",
    srcs = [
        "configure.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "language.go",
        "resolve.go",
    ],
    importpath = "github.com/Chippiewill/gazelle_pyproject/gazelle_pyproject",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

gazelle_binary(
    name = "gazelle",
    languages = [
        "@gazelle//language/go",  # Built-in rule from gazelle for Golang.
        ":gazelle_pyproject",
    ],
    visibility = ["//visibility:public"],
)
